--- a/projet3/static/css/app.css
+++ b/projet3/static/css/app.css
@@ -19,9 +19,21 @@ nav ul li{
 nav ul li a {
   background-color: #ccc;
   border-radius: 4px;
-  padding: 6px
+  padding: 6px;
+  font-size: .9rem;
+}
+
+nav ul li a:hover {
+  /* retrait du soulignement  */
+  text-decoration: none
 }
 
 #wrapper {
   padding-left: 20px
+}
+
+.active {
+  background-color: #999;
+  color: white;
+  font-weight: bold
 }
